fix alignment of nodes and groups, allow nesting of groups manually

--- a/src/App.css
+++ b/src/App.css
@@ -41,15 +41,15 @@
 }
 
 .path {
-  stroke-width: 2px;
+  stroke-width: 1.2px;
   stroke: black;
   fill: none;
-  opacity: 1;
+  opacity: 0.5;
 }
 
 .box {
-  width: 100px;
-  height: 100px;
+  width: 64px;
+  height: 64px;
   position: relative;
   transform: rotateX(-35deg) rotateY(50deg) rotateZ(0deg);
   -webkit-transform-style: preserve-3d;
@@ -60,22 +60,22 @@
 }
 
 .side {
-  width: 100px;
-  height: 100px;
+  width: 64px;
+  height: 64px;
   background: #C1C1C1;
   border: 1px solid #000;
   position: absolute;
   opacity: 0.5;
 }
 .side-1 {
-  width: 100px;
-  height: 100px;
+  width: 64px;
+  height: 64px;
   position: absolute;
-  -webkit-transform: rotateX(90deg) translateZ(50px);
-  -moz-transform: rotateX(90deg) translateZ(50px);
-  -ms-transform: rotateX(90deg) translateZ(50px);
-  -o-transform: rotateX(90deg) translateZ(50px);
-  transform: rotateX(90deg) translateZ(50px);
+  -webkit-transform: rotateX(90deg) translateZ(32px);
+  -moz-transform: rotateX(90deg) translateZ(32px);
+  -ms-transform: rotateX(90deg) translateZ(32px);
+  -o-transform: rotateX(90deg) translateZ(32px);
+  transform: rotateX(90deg) translateZ(32px);
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   -ms-transform-style: preserve-3d;
@@ -85,11 +85,11 @@
 }
 
 .side-2 {
-  -webkit-transform: translateZ(50px);
-  -moz-transform: translateZ(50px);
-  -ms-transform: translateZ(50px);
-  -o-transform: translateZ(50px);
-  transform: translateZ(50px);
+  -webkit-transform: translateZ(32px);
+  -moz-transform: translateZ(32px);
+  -ms-transform: translateZ(32px);
+  -o-transform: translateZ(32px);
+  transform: translateZ(32px);
   font-family: 'CargoCrate', serif;
   line-height: 30px;
   font-size: 14px;
@@ -98,51 +98,51 @@
 }
 
 .side-3 {
-  -webkit-transform: rotateY(90deg) translateZ(50px);
-  -moz-transform: rotateY(90deg) translateZ(50px);
-  -ms-transform: rotateY(90deg) translateZ(50px);
-  -o-transform: rotateY(90deg) translateZ(50px);
-  transform: rotateY(90deg) translateZ(50px);
+  -webkit-transform: rotateY(90deg) translateZ(32px);
+  -moz-transform: rotateY(90deg) translateZ(32px);
+  -ms-transform: rotateY(90deg) translateZ(32px);
+  -o-transform: rotateY(90deg) translateZ(32px);
+  transform: rotateY(90deg) translateZ(32px);
   z-index: 2;
 }
 
 .side-4 {
-  -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(50px);
-  -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(50px);
-  -ms-transform: rotateX(-90deg) rotate(180deg) translateZ(50px);
-  -o-transform: rotateX(-90deg) rotate(180deg) translateZ(50px);
-  transform: rotateX(-90deg) rotate(180deg) translateZ(50px);
+  -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(32px);
+  -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(32px);
+  -ms-transform: rotateX(-90deg) rotate(180deg) translateZ(32px);
+  -o-transform: rotateX(-90deg) rotate(180deg) translateZ(32px);
+  transform: rotateX(-90deg) rotate(180deg) translateZ(32px);
 }
 
 .side-5 {
-  -webkit-transform: rotateY(180deg) translateZ(50px);
-  -moz-transform: rotateY(180deg) translateZ(50px);
-  -ms-transform: rotateY(180deg) translateZ(50px);
-  -o-transform: rotateY(180deg) translateZ(50px);
-  transform: rotateY(180deg) translateZ(50px);
+  -webkit-transform: rotateY(180deg) translateZ(32px);
+  -moz-transform: rotateY(180deg) translateZ(32px);
+  -ms-transform: rotateY(180deg) translateZ(32px);
+  -o-transform: rotateY(180deg) translateZ(32px);
+  transform: rotateY(180deg) translateZ(32px);
   z-index: 2;
 }
 
 .side-6 {
-  -webkit-transform: rotateY(-90deg) translateZ(50px);
-  -moz-transform: rotateY(-90deg) translateZ(50px);
-  -ms-transform: rotateY(-90deg) translateZ(50px);
-  -o-transform: rotateY(-90deg) translateZ(50px);
-  transform: rotateY(-90deg) translateZ(50px);
+  -webkit-transform: rotateY(-90deg) translateZ(32px);
+  -moz-transform: rotateY(-90deg) translateZ(32px);
+  -ms-transform: rotateY(-90deg) translateZ(32px);
+  -o-transform: rotateY(-90deg) translateZ(32px);
+  transform: rotateY(-90deg) translateZ(32px);
   z-index: -1;
 }
 
 .handle-left {
-  transform: translateX(50px) translateY(0px) rotateY(-90deg) translateZ(50px);
+  transform: translateX(32px) translateY(0px) rotateY(-90deg) translateZ(32px);
 }
 .handle-right {
-  transform: translateX(-50px) translateY(-0px) rotateY(90deg) translateZ(50px);
+  transform: translateX(-32px) translateY(-0px) rotateY(90deg) translateZ(32px);
 }
 .handle-top {
-  transform: translateX(0px) translateY(50px) rotateY(180deg) translateZ(50px);
+  transform: translateX(0px) translateY(32px) rotateY(180deg) translateZ(32px);
 }
 .handle-bottom {
-  transform: translateX(0px) translateY(-50px) translateZ(50px);
+  transform: translateX(0px) translateY(-20px) translateZ(32px);
 }
 
 /* The switch - the box around the slider */
